--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "install-all": "npm install && npm install --workspace=contracts && npm install --workspace=frontend",
-    "build": "npm run build --workspace=contracts && npm run build --workspace=frontend",
+    "build": "npm run build --workspace=frontend",
+    "build:all": "npm run build --workspace=contracts && npm run build --workspace=frontend",
     "test": "npm run test --workspace=contracts",
     "deploy": "npm run deploy --workspace=contracts",
     "dev:frontend": "npm run dev --workspace=frontend",
